# ReaForge-SDK

./: .gitignore  .gitmodules  LICENSE  README.md  bridge-spike-results.md  build_log.txt  meson.build  mvp-results.md  setup_log.txt  spike-results.md  test_output.txt
.atl/: .skill-registry.cache.json  skill-registry.md
C:/: clean_py_path.ps1  cleanup-python.ps1  del_py.ps1  find_py.ps1  fix_py_path.ps1  nucler.ps1  probe_isolated_ow.cpp  probe_setenv.cpp  run_with_timeout.ps1
cross/: windows-mingw64.txt
docs/: cross-environment.md  user-flows.md
docs/api_reference/: fx_chain_format.md  jsfx.md  reascript_lua.md
docs/api_reference/fx_chain-primitives/: chain-builder-template.md
docs/api_reference/fx_chain-primitives/recipes/: vocal-slap.md
docs/documentacion/: 01-vision-and-pivot.md  02-architecture.md  03-current-state.md  04-mvp-and-handoff.md  05-plan-arquitectonico.md  README.md
openspec/changes/2026-06-07-reaforge-agentic-mvp/: design.md  explore.md  proposal.md  tasks.md
openspec/changes/2026-06-07-reaforge-agentic-mvp/specs/archive/extension-execution/: REJECTED.md
openspec/changes/2026-06-07-reaforge-agentic-mvp/specs/archive/multi-runtime/: REJECTED.md
openspec/changes/2026-06-07-reaforge-agentic-mvp/specs/archive/runtime-bridge/: REJECTED.md
openspec/changes/2026-06-07-reaforge-agentic-mvp/specs/artifact-folder-convention/: spec.md
openspec/changes/2026-06-07-reaforge-agentic-mvp/specs/bridge-tools-v2/: spec.md
openspec/changes/2026-06-07-reaforge-agentic-mvp/specs/extension-read-api/: spec.md
openspec/changes/2026-06-07-reaforge-agentic-mvp/specs/extension-write-api/: spec.md
openspec/changes/2026-06-07-reaforge-agentic-mvp/specs/refresh-protocol/: spec.md
openspec/changes/2026-06-07-reaforge-bridge-spike/: explore.md  proposal.md
openspec/changes/2026-06-07-reaforge-fase1a-host/: design.md  explore.md  proposal.md  tasks.md  verify-report.md
openspec/changes/2026-06-07-reaforge-fase1a-host/specs/context-menu-integration/: spec.md
openspec/changes/2026-06-07-reaforge-fase1a-host/specs/extensions-manager-panel/: spec.md
openspec/changes/2026-06-07-reaforge-fase1a-host/specs/host-lifecycle/: spec.md
openspec/changes/2026-06-07-reaforge-spike/: tasks.md  verify-report.md
openspec/changes/2026-06-07-reaforge-spike/specs/multi-runtime/: spec.md
openspec/changes/2026-06-07-reaforge-spike/specs/runtime-bridge/: spec.md
openspec/changes/archive/2026-06-07-reaforge-spike/: design.md  explore.md  proposal.md  tasks.md  verify-report.md
openspec/specs/extension-execution/: spec.md
scripts/: build-and-load-linux.sh  build-windows.sh  install-build-deps.sh  run_benchmark.sh
src/host/: api_reference_data.h  artifact_writer.cpp  artifact_writer.h  bench.cpp  context_menu.cpp  context_menu.h  executor.cpp  executor.h  extension_loader.cpp  extension_loader.h  host.cpp  host.h  http_server.cpp  http_server.h  main.cpp  main_thread_queue.cpp  main_thread_queue.h  meson.build  mvp_host.cpp  panel.cpp  panel.h  project_reader.cpp  project_reader.h  refresh.cpp  refresh.h
src/host/bridge/: bridge_bindings.h  bridge_jsfx.cpp  bridge_lua.cpp  bridge_quickjs.cpp
src/host/extensions/humanize_midi/: humanize_midi.lua  manifest.lua
src/host/runtime/: lua_runtime.cpp  lua_runtime.h  quickjs_runtime.cpp  quickjs_runtime.h
src/host/tests/: test_artifact_writer.cpp  test_http_server.cpp  test_loader.cpp  test_main_thread_queue.cpp  test_project_reader.cpp
src/spike/: bench.cpp  meson.build
src/spike/bridge/: bridge.cpp  bridge.h  bridge_quickjs.cpp
src/spike/runtime/: jsfx_runtime.cpp  jsfx_runtime.h  quickjs_runtime.h
tests/: test_bridge_tools.py  test_stub_endpoints.py
tools/: gen_api_reference_header.py  interactive_bridge_test.py  opencode_bridge.py  run_bridge_smoke.sh  stub_reaper_server.py
